TFP-5621: Endrer oppsett til å gå mot fpsoknad og fpoversikt, og ikke via foreldrepengesoknad-api